--- a/css/general.css
+++ b/css/general.css
@@ -54,6 +54,10 @@ img {
 
 .rollover p {
 	color: white;
+	display: block;
+	padding-top: 4em;
+	padding-left: 3em;
+	padding-right: 3em;
 }
 
 .rollover {
@@ -62,7 +66,6 @@ img {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	text-align: center;
 	opacity: 0;
 }
 
@@ -72,8 +75,7 @@ img {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	text-align: center;
-	opacity: 100;
+	opacity: 1;
 }
 
 @media only screen and (min-width: 350px) {
