--- a/css/general.css
+++ b/css/general.css
@@ -44,6 +44,20 @@ img {
 	width: 100%;
 }
 
+.navbar {
+	display: block;
+	text-align: center;
+	margin-bottom: 3em;
+	margin-top: 2.6em;
+}
+
+.navbar li {
+	display: inline-block;
+	padding-left: 1em;
+	padding-right: 1em;
+	text-transform: uppercase;
+}
+
 .menuicon {
 	width: 8%;
 	margin-left:85%;
@@ -55,8 +69,8 @@ img {
 	width: 75%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 20%;
-	margin-bottom: 30%;
+	margin-top: 27%;
+	margin-bottom: 10%;
 }
 
 .portfolio {
