--- a/css/general.css
+++ b/css/general.css
@@ -31,6 +31,10 @@ a {
 	text-decoration: none;
 }
 
+a:visited {
+	color: inherit;
+}
+
 body {
 	margin: 0 auto;
 }
@@ -112,7 +116,8 @@ footer {
 }
 
 .footer-nav li {
-	font-size: .75em;
+	font-size: .8em;
+	padding-bottom: .4em;
 }
 
 footer p {
