--- a/css/general.css
+++ b/css/general.css
@@ -109,23 +109,29 @@ footer {
 	background-color: gray;
 }
 
+h3 {
+	margin: 0;
+}
+
 .top-arrow {
 	width: 0;
 	height: 0;
-	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;
+	border-left: 8px solid transparent;
+	border-right: 8px solid transparent;
 
-	border-bottom: 10px solid black;
+	border-bottom: 8px solid black;
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 1.5em;
+	padding-top: 2em;
 }
 
 .back-to-top a {
 	text-align: center;
 	margin: .5em;
+	margin-bottom: 2em;
 	display: block;
-	font-size: .8em;
+	font-size: .77em;
+	text-transform: uppercase;
 }
 
 .footer-content {
@@ -136,6 +142,11 @@ footer {
 .footer-nav li {
 	font-size: .8em;
 	padding-bottom: .4em;
+}
+
+.footer-nav ul {
+	margin-top: .6em;
+	margin-bottom: 2.8em;
 }
 
 footer p {
