--- a/css/general.css
+++ b/css/general.css
@@ -106,11 +106,12 @@ img {
 }
 
 footer {
-	background-color: gray;
+	background-color: #333;
 }
 
 h3 {
 	margin: 0;
+	color: #666;
 }
 
 .top-arrow {
@@ -119,7 +120,7 @@ h3 {
 	border-left: 8px solid transparent;
 	border-right: 8px solid transparent;
 
-	border-bottom: 8px solid black;
+	border-bottom: 8px solid #fff;
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 2em;
@@ -132,6 +133,7 @@ h3 {
 	display: block;
 	font-size: .77em;
 	text-transform: uppercase;
+	color: #fff;
 }
 
 
@@ -148,10 +150,12 @@ h3 {
 .footer-nav ul {
 	margin-top: .6em;
 	margin-bottom: 2.4em;
+	color: #666;
 }
 
 footer p {
 	font-size: .8em;
+	color: #666;
 }
 
 @media only screen and (min-width: 390px) {
