--- a/css/general.css
+++ b/css/general.css
@@ -158,10 +158,40 @@ footer p {
 	color: #666;
 }
 
-@media only screen and (min-width: 390px) {
+@media only screen and (min-width: 23em) {
+
+.navlogo {
+	width: 71%;
+}
+
+.rollover p {
+	color: white;
+	display: block;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 70%;
+}
+
+}
+
+@media only screen and (min-width: 25em) {
 
 body {
 	background-color: blue;
+}
+
+.rollover p {
+	color: white;
+	display: block;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 65%;
 }
 
 }
