--- a/css/general.css
+++ b/css/general.css
@@ -75,6 +75,10 @@ img {
 	margin-bottom: 10%;
 }
 
+.full-portfolio {
+	display: none;
+}
+
 .portfolio {
 	background-color: orange;
 	width: 100%;
@@ -179,10 +183,6 @@ footer p {
 
 @media only screen and (min-width: 25em) {
 
-body {
-	background-color: blue;
-}
-
 .rollover p {
 	color: white;
 	display: block;
@@ -192,6 +192,50 @@ body {
 	left: 50%;
 	transform: translate(-50%,-50%);
 	width: 65%;
+}
+
+}
+
+@media only screen and (min-width: 27em) {
+
+body {
+	background-color: green;
+}
+
+.navlogo {
+	width: 30%;
+	margin-left: 1em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	display: inline-block;
+}
+
+.rollover {
+	display: none;
+}
+
+.portfolio {
+	display: none;
+}
+
+.full-portfolio {
+	display: block;
+}
+
+.navbar {
+	display: inline-block;
+	text-align: right;
+	margin-bottom: 1em;
+	margin-top: 1.7em;
+	margin-right: 1em;
+	float: right;
+}
+
+.navbar li {
+	display: inline-block;
+	padding-left: .5em;
+	padding-right: .5em;
+	text-transform: uppercase;
 }
 
 }
