--- a/css/general.css
+++ b/css/general.css
@@ -59,6 +59,7 @@ img {
 	padding-left: 1em;
 	padding-right: 1em;
 	text-transform: uppercase;
+	color: #999;
 }
 
 .menuicon {
@@ -202,10 +203,6 @@ footer p {
 
 @media only screen and (min-width: 27em) {
 
-body {
-	background-color: green;
-}
-
 .navlogo {
 	width: 35%;
 	margin-left: 1em;
@@ -231,7 +228,7 @@ body {
 	display: inline-block;
 	text-align: right;
 	margin-bottom: 1em;
-	margin-top: 1.7em;
+	margin-top: 2em;
 	margin-right: 1.2em;
 	float: right;
 }
