--- a/css/general.css
+++ b/css/general.css
@@ -49,17 +49,19 @@ img {
 
 .navbar {
 	display: block;
-	text-align: center;
-	margin-bottom: 3em;
-	margin-top: 2.6em;
+	text-align: right;
+	margin-bottom: 1em;
+	margin-top: 1.8em;
+	margin-right: 1.5em;
 }
 
 .navbar li {
 	display: inline-block;
-	padding-left: 1em;
-	padding-right: 1em;
+	padding-left: .5em;
+	padding-right: .5em;
 	text-transform: uppercase;
 	color: #999;
+	font-size: .9em
 }
 
 .menuicon {
@@ -73,8 +75,8 @@ img {
 	width: 75%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 27%;
-	margin-bottom: 10%;
+	margin-top: 21%;
+	margin-bottom: 30%;
 }
 
 .full-portfolio {
