--- a/css/general.css
+++ b/css/general.css
@@ -49,10 +49,9 @@ img {
 
 .navbar {
 	display: block;
-	text-align: right;
+	text-align: center;
 	margin-bottom: 1em;
 	margin-top: 1.8em;
-	margin-right: 1.5em;
 }
 
 .navbar li {
