--- a/css/general.css
+++ b/css/general.css
@@ -49,6 +49,10 @@ img {
 	display: none;
 }
 
+.mobile-nav[data-state="expanded"] {
+	display: block;
+}
+
 .mobile-nav ul {
 	margin: 0;
 }
@@ -61,7 +65,7 @@ hr {
 	color: white;
 	padding-top: 1.3em;
 	padding-bottom: 1.3em;
-	padding-right: 2em;
+	padding-right: 2.1em;
 	text-align: right;
 	text-transform: uppercase;
 }
