--- a/css/general.css
+++ b/css/general.css
@@ -11,6 +11,7 @@ html {
 	min-width: 15em;
 	font-family: 'Armata', sans-serif;
 	font-family: 'Montserrat', sans-serif;
+	font-weight: normal;
 }
 
 * {
