--- a/css/general.css
+++ b/css/general.css
@@ -137,10 +137,12 @@ padding-right: 1.2em;
 	width: 100%;
 	height: 100%;
 	opacity: 0;
+	filter: alpha(opacity=0);
 }
 
 .rollover:hover {
 	opacity: 1;
+	filter: alpha(opacity=100);
 }
 
 footer {
