--- a/css/general.css
+++ b/css/general.css
@@ -136,23 +136,15 @@ padding-right: 1.2em;
 	top: 0;
 	width: 100%;
 	height: 100%;
-	display: none;
-}
-
-.rollover[data-state="expanded"] {
-	background: #cb3227;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	display: block;
+	opacity: 0;
+	filter: alpha(opacity=0);
 }
 
 
-/*.rollover:hover {
+.rollover:hover {
 	opacity: 1;
 	filter: alpha(opacity=100);
-}*/
+}
 
 footer {
 	background-color: #333;
