--- a/css/general.css
+++ b/css/general.css
@@ -47,6 +47,7 @@ body {
 img {
 	width: 100%;
 	display: block;
+	margin: 0 auto;
 }
 
 .mobile-nav {
@@ -298,6 +299,18 @@ footer p {
 	padding-right: .5em;
 	text-transform: uppercase;
 	font-size: .8em;
+}
+
+.hourly {
+	background: transparent url("../img/hourly-full.jpg") no-repeat center top;
+	background-size: cover;
+}
+
+.hourly-phone {
+	width: 40%;
+	margin: 0;
+	padding-top: 5%;
+	padding-left: 5%;
 }
 
 }
