--- a/css/general.css
+++ b/css/general.css
@@ -74,6 +74,12 @@ header {
 	margin: .7em;
 }
 
+header p {
+	text-align: center;
+	text-transform: uppercase;
+	margin-bottom: 17%;
+}
+
 .mobile-nav li {
 	color: white;
 	padding-top: 1.3em;
@@ -112,7 +118,7 @@ padding-right: 1.2em;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 33%;
-	margin-bottom: 32%;
+	margin-bottom: 15%;
 }
 
 .new {
