--- a/css/general.css
+++ b/css/general.css
@@ -136,7 +136,7 @@ padding-right: 1.2em;
 	margin: 0;
 	margin-bottom: .2em;
 	font-size: 1em;
-	font-style: none;
+	font-weight: normal;
 }
 
 .info p {
@@ -189,10 +189,12 @@ h3 {
 	color: #666;
 	padding-bottom: .4em;
 	display: inline-block;
+	font-weight: normal;
 }
 
 h3:hover {
 	color: white;
+	font-weight: normal;
 }
 
 h3:active {
