--- a/css/general.css
+++ b/css/general.css
@@ -12,6 +12,7 @@ html {
 	font-family: 'Armata', sans-serif;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: normal;
+	background-color: #cb3227
 }
 
 * {
@@ -20,233 +21,6 @@ html {
   box-sizing: border-box;
 }
 
-ul {
-	list-style: none;
-	padding-left: 0;
-}
-
-li{
-	text-decoration: none;
-}
-
-a {
-	text-decoration: none;
-	color: inherit;
-}
-
-a:hover {
-	color: #666;
-	text-decoration: none;
-}
-
-
-body {
-	margin: 0 auto;
-	background-color: #e5e5e5;
-}
-
-img {
-	width: 100%;
-	display: block;
-	margin: 0 auto;
-}
-
-.mobile-nav {
-	background-color: #333;
-	border-bottom: solid 1px #999;
-	display: none;
-}
-
-.mobile-nav[data-state="expanded"] {
-	display: block;
-}
-
-.mobile-nav ul {
-	margin: 0;
-}
-
-hr {
-	margin: 0;
-}
-
-header {
-	background-color: #fff;
-	margin: .7em;
-}
-
-header p {
-	text-align: center;
-	text-transform: uppercase;
-	margin-bottom: 17%;
-}
-
-.mobile-nav li {
-	color: white;
-	padding-top: 1.3em;
-	padding-bottom: 1.3em;
-	padding-right: 2.1em;
-	text-align: right;
-	text-transform: uppercase;
-}
-
-.nav-btn {
-width: 14%;
-display: inline-block;
-float: right;
-padding-top: 1.2em;
-padding-right: 1.2em;
-}
-
-.navbar {
-	display: none;
-	text-align: center;
-	margin-bottom: 1em;
-	margin-top: 1.8em;
-}
-
-.navbar li {
-	display: inline-block;
-	padding-left: .5em;
-	padding-right: .5em;
-	text-transform: uppercase;
-	color: #999;
-	font-size: .9em
-}
-
-.navlogo {
-	width: 75%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 33%;
-	margin-bottom: 15%;
-}
-
-.new {
-	margin-left: .7em;
-	margin-right: .7em;
-}
-
-.info {
-	background-color: #FFF;
-	padding: 1.2em;
-	margin-bottom: .7em;
-}
-
-.info h2 {
-	margin: 0;
-	margin-bottom: .2em;
-	font-size: 1em;
-	font-weight: normal;
-}
-
-.info p {
-	margin: 0;
-	padding-bottom: .3em;
-	font-family: 'Armata', sans-serif;
-	font-size: .8em;
-}
-
-.rollover p {
-	color: white;
-	display: block;
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	width: 75%;
-	font-family: 'Armata', sans-serif;
-}
-
-.rollover {
-	background: #cb3227;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-	filter: alpha(opacity=0);
-}
-
-
-.rollover:hover {
-	opacity: 1;
-	filter: alpha(opacity=100);
-}
-
-footer {
-	background-color: #333;
-}
-
-.nav-bottom {
-	width: 5em;
-	padding-left: 2em;
-	padding-top: 1em;
-}
-
-h3 {
-	margin: 0;
-	color: #666;
-	padding-bottom: .4em;
-	display: inline-block;
-	font-weight: normal;
-}
-
-h3:hover {
-	color: white;
-	font-weight: normal;
-}
-
-h3:active {
-	color: none;
-}
-
-.top-arrow {
-	width: 0;
-	height: 0;
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
-
-	border-bottom: 8px solid #fff;
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 2em;
-}
-
-.back-to-top a {
-	text-align: center;
-	margin: .5em;
-	margin-bottom: 2em;
-	display: block;
-	font-size: .77em;
-	text-transform: uppercase;
-	color: #fff;
-}
-
-.footer-content {
-	padding: 2em;
-	padding-top: 0;
-}
-
-.footer-nav li {
-	font-size: .8em;
-	padding-bottom: .4em;
-	font-family: 'Armata', sans-serif;
-	display: inline-block;
-}
-
-.footer-nav ul {
-	margin-top: .3em;
-	margin-bottom: 2.4em;
-	color: #666;
-	width: 10em;
-}
-
-footer p {
-	font-size: .8em;
-	color: #666;
-	font-family: 'Armata', sans-serif;
-}
 
 
 
