--- a/css/general.css
+++ b/css/general.css
@@ -8,11 +8,17 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-	min-width: 15em;
-	font-family: 'Armata', sans-serif;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: normal;
 	background-color: #cb3227
+}
+
+img {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   width: 500px;
+   height: 500px;
+   margin-top: -250px; /* Half the height */
+   margin-left: -250px; /* Half the width */
 }
 
 * {
